<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Login"
            android:text="@string/str_login_username" />

        <EditText
            android:id="@+id/et_username"
            style="@style/EditText_Login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextView_Login"
            android:text="@string/str_login_password" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditText_Login" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_auto_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"/>

        <TextView
            style="@style/TextView_Login"
            android:text="@string/str_login_auto_login" />

        <CheckBox
            android:id="@+id/cb_remenber_userInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:checked="false"/>

        <TextView
            style="@style/TextView_Login"
            android:text="@string/str_login_remenber_user" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        style="@style/Button_Login"
        android:layout_marginTop="20dp"
        android:background="#ffffa704"
        android:text="@string/str_login" />
</LinearLayout>
